--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,6 @@
-@import '~react-grid-layout/css/styles.css';
-@import '~react-resizable/css/styles.css';
+@import 'react-grid-layout/css/styles.css';
+@import 'react-resizable/css/styles.css';
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
